[package]

name = "ole32-sys"
version = "0.0.1"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "FFI bindings to ole32."
documentation = "https://retep998.github.io/ole32-sys/ole32-sys/"
repository = "https://github.com/retep998/ole32-sys"
readme = "README.md"
license = "MIT"
build = "build.rs"
links = "ole32"

[dependencies]
winapi = "*"
